--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.indosayurindonesiakotlin">
+    package="com.example.indosayurindonesiakotlin" >
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.IndosayurIndonesiaKotlin">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.IndosayurIndonesiaKotlin" >
+        <activity
+            android:name="Activity.MainActivity2"
+            android:label="@string/title_activity_main2" >
+        </activity>
+        <activity
+            android:name="Activity.MainActivity"
+            android:label="@string/title_activity_main" />
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
