--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.indosayurindonesiakotlin">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -8,8 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.IndosayurIndonesiaKotlin">
         <activity android:name="Activity.BaruActivity"></activity>
+
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -18,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="Activity.LoginActivity"></activity>
+        <activity android:name="Activity.MasukActivity" />
+        <activity android:name="Activity.RegisterActivity" />
+        
     </application>
 
 </manifest>
