--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.indosayurindonesiakotlin">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
         android:allowBackup="true"
@@ -11,11 +13,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/config_network"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.IndosayurIndonesiaKotlin">
-        <activity android:name="Activity.BaruActivity"></activity>
-
-
+        <activity android:name="activity.BaruActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="Activity.LoginActivity"></activity>
-        <activity android:name="Activity.MasukActivity" />
-        <activity android:name="Activity.RegisterActivity" />
-        <activity android:name="Activity.DetailProdukActivity" />
+        <activity android:name="activity.LoginActivity"></activity>
+        <activity android:name="activity.MasukActivity" />
+        <activity android:name="activity.RegisterActivity" />
+        <activity android:name="activity.DetailProdukActivity" />
 
         
     </application>
