--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.indosayurindonesiakotlin">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-
 
     <application
         android:allowBackup="true"
@@ -16,7 +14,7 @@
         android:networkSecurityConfig="@xml/config_network"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.IndosayurIndonesiaKotlin">
-        <activity android:name="activity.BaruActivity"></activity>
+        <activity android:name="activity.BaruActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="activity.LoginActivity"></activity>
+        <activity android:name="activity.LoginActivity" />
         <activity android:name="activity.MasukActivity" />
         <activity android:name="activity.RegisterActivity" />
         <activity android:name="activity.DetailProdukActivity" />
