--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,12 @@
         <activity android:name="activity.MasukActivity" />
         <activity android:name="activity.RegisterActivity" />
         <activity android:name="activity.DetailProdukActivity" />
+        <activity android:name="activity.TambahAlamatActivity"/>
 
-        
+        <activity android:name="activity.ListAlamatActivity" />
+        <activity android:name="activity.PengirimanActivity" />
+
+
     </application>
 
 </manifest>
