--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,11 @@
         <activity android:name="activity.RegisterActivity" />
         <activity android:name="activity.DetailProdukActivity" />
         <activity android:name="activity.TambahAlamatActivity"/>
-
         <activity android:name="activity.ListAlamatActivity" />
         <activity android:name="activity.PengirimanActivity" />
         <activity android:name="activity.PembayaranActivity" />
         <activity android:name="activity.SuccessActivity" />
+        <activity android:name="activity.RiwayatActivity" />
 
 
     </application>
